<resources>
    <string name="app_name">CapWayDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_news_feed">News Feed</string>
    <string name="menu_article_details">Article Details</string>
    <string name="notifications">Notifications</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="out_of_scope">Action not part of this scope</string>
    <string name="business">Business</string>
    <string name="gadgets">Gadgets</string>
    <string name="sport">Sport</string>
    <string name="video">Video</string>
    <string name="article_title_picture">Article title picture</string>
    <string name="not_part_of_scope">Action not part of this scope</string>
    <string name="no_items_found">No items found...</string>
</resources>